# Final-Fight

./: .gitignore  01_hello_SDL.cpp  BackLog.ods  CMakeLists.txt  Configuracion.xml  FileManager.cpp  FileManager.h  GameLoop.cpp  LICENCE.txt  Logger.cpp  Logger.h  Makefile  Makefile.OSX  README.md  XmlReader.cpp  XmlReader.h  calc  calc.cpp  main.cpp  supresiones.supp
FilesManager/: FileManager.cpp  FileManager.h  Logger.cpp  Logger.h
Icomportamiento/: ComportamientoDeEnemigo.h  ComportamientoNulo.h  IComportamiento.cpp  IComportamiento.h
Ifisica/: Fisica.cpp  Fisica.h  FisicaDeFrontera.h  FisicaDeMapeable.cpp
Igraficos/: Animacion.cpp  Animacion.h  FabricaDeAnimacionesDeCody.h  FabricaDeAnimacionesDePoison.cpp  Grafico.h  GraficoDeFrontera.h  GraficoDeMapeable.cpp  GraficoDePersonaje.cpp  GraficoDePersonaje.h
Imodelo/: Mapa.cpp  Mapa.h  Posicion.h
Iniveles/: Nivel1.cpp
cliente/: Actualizador.cpp  Actualizador.h  ActualizadorCliente.cpp  ActualizadorCliente.h  Animador.cpp  Animador.h  AnimadorArmas.cpp  AnimadorArmas.h  Autenticador.cpp  Autenticador.h  ConexionCliente.cpp  ConexionCliente.h  Entrada.cpp  Entrada.h  EntradaPantallaDeSeleccionNuevo.cpp  EntradaPantallaDeSeleccionNuevo.h  EntradaSeleccionPersonaje.cpp  EntradaSeleccionPersonaje.h  EntradaUsuario.cpp  EntradaUsuario.h  Escucha.cpp  Escucha.h  Etapas.cpp  Etapas.h  FabricaDeMusicas.cpp  FabricaDeMusicas.h  FabricaDeSonidos.cpp  FabricaDeSonidos.h  FabricaDeSprites.cpp  FabricaDeSprites.h  Juego.cpp  Juego.h  NivelCliente.cpp  NivelCliente.h  ReceptorCliente.cpp  ReceptorCliente.h  Reproductor.cpp  Reproductor.h  ReproductorEfectosDeEnemigos.cpp  ReproductorEfectosDeEnemigos.h  (+11 more)
comportamiento/: Animador.cpp  Comportamiento.cpp  Comportamiento.h  ComportamientoDeEnemigo.cpp  ComportamientoDeEnemigo.h  ComportamientoDeJugador.cpp  ComportamientoDeJugador.h  ComportamientoNulo.cpp  ComportamientoNulo.h  EntradaJugador.cpp  EntradaJugador.h  EntradaPantallaDeEspera.cpp  EntradaPantallaDeEspera.h  EntradaPantallaDeSeleccion.cpp  EntradaPantallaDeSeleccion.h  Patrullar.cpp  Patrullar.h
estados/: Agachado.cpp  Agachado.h  Caminando.cpp  Caminando.h  DandoGolpe.cpp  DandoGolpe.h  EstadoDeColisionable.h  EstadoDePersonaje.cpp  EstadoDePersonaje.h  EstadoDePersonajeServidor.cpp  EstadoDePersonajeServidor.h  Golpeado.cpp  Golpeado.h  Golpeando.cpp  Golpeando.h  Muerto.cpp  Parado.cpp  Parado.h  RecibiendoGolpe.cpp  RecibiendoGolpe.h  Reposando.cpp  Reposando.h  Saltando.cpp  Saltando.h
eventos/: ActualizarYSerializarMapa.cpp  ActualizarYSerializarMapa.h  ActualizarYTransmitir.cpp  ActualizarYTransmitir.h  ConfirmarSeleccion.cpp  ConfirmarSeleccion.h  DesconectarVoluntariamente.cpp  DesconectarVoluntariamente.h  EventoModoTest.cpp  EventoModoTest.h  EventoPersonaje.cpp  EventoPersonaje.h  Eventos.cpp  Eventos.h  MostrarMenuSeleccion.cpp  MostrarMenuSeleccion.h  MostrarPantallaDeSeleccion.cpp  MostrarPantallaDeSeleccion.h  SeleccionarCody.cpp  SeleccionarCody.h  queue.h  semaphore.h
fisica/: Fisica.cpp  Fisica.h  FisicaDeColisiones.cpp  FisicaDeColisiones.h  FisicaDeEscenario.cpp  FisicaDeEscenario.h  FisicaDeFrontera.cpp  FisicaDeFrontera.h  FisicaDeMapeable.h  FisicaDeObjeto.cpp  FisicaDeObjeto.h  FisicaDeObjetoDestruible.cpp  FisicaDeObjetoDestruible.h  FisicaDeObjetoInteractuable.cpp  FisicaDeObjetoInteractuable.h  FisicaDePersonaje.cpp  FisicaDePersonaje.h  FisicaDeTransicion.cpp  FisicaDeTransicion.h
graficos/: Animacion.cpp  Animacion.h  AnimacionCliente.cpp  AnimacionCliente.h  FabricaDeAnimacionesCliente.cpp  FabricaDeAnimacionesCliente.h  FabricaDeAnimacionesDeAndore.cpp  FabricaDeAnimacionesDeAndore.h  FabricaDeAnimacionesDeAxl.cpp  FabricaDeAnimacionesDeCody.cpp  FabricaDeAnimacionesDeCody.h  FabricaDeAnimacionesDeCodys.cpp  FabricaDeAnimacionesDeCodys.h  FabricaDeAnimacionesDeCuchillo.cpp  FabricaDeAnimacionesDeDamnd.cpp  FabricaDeAnimacionesDeHaggar.h  FabricaDeAnimacionesDeOriber.cpp  FabricaDeAnimacionesDePoison.cpp  FabricaDeAnimacionesDePoison.h  FabricaDeGraficosDeCody.cpp  FabricaDeGraficosDeCody.h  FabricaDeGraficosDePoison.cpp  FabricaDeGraficosDePoison.h  Grafico.cpp  Grafico.h  GraficoArma.h  GraficoDeCaja.cpp  GraficoDeCaja.h  GraficoDeElementosPantalla.cpp  GraficoDeElementosPantalla.h  GraficoDeEscenario.cpp  GraficoDeEscenario.h  GraficoDeFrontera.cpp  GraficoDeFrontera.h  GraficoDeMapeable.cpp  GraficoDeMapeable.h  GraficoDeObjeto.cpp  GraficoDeObjeto.h  GraficoDeObjetoDestruible.cpp  GraficoDeObjetoDestruible.h  (+27 more)
graphics/: BoxGraphics.cpp  BoxGraphics.h  Graphics.cpp  Graphics.h
hilos/: Evento.cpp  Evento.h  Eventos.cpp  Eventos.h  data.h  semaphore.h
main/: Game.cpp  Game.h  Juego.cpp  Juego.h  main.cpp
model/: Caja.cpp  Caja.h  Direccion.cpp  Direccion.h  Iterator.cpp  Mapa.cpp  Mapa.h  Mapeable.cpp  Mapeable.h  Personaje.cpp  Personaje.h  Posicion.cpp  Posicion.h  Velocidad.cpp  Velocidad.h
modelo/: Accion.cpp  Accion.h  Actividad.cpp  Actividad.h  Colisionables.cpp  Colisionables.h  Dimension.cpp  Dimension.h  Energia.cpp  Energia.h  Entidad.cpp  Entidad.h  Envolvente.cpp  Envolvente.h  EstadoDePersonaje.h  EventoUsuario.cpp  EventoUsuario.h  GolpesSoportables.cpp  GolpesSoportables.h  Hilo.cpp  Hilo.h  IndiceSprite.cpp  IndiceSprite.h  Input.cpp  Input.h  Iterator.cpp  Jugadores.cpp  Jugadores.h  Mapa.cpp  Mapa.h  Nivel.cpp  Nivel.h  NotificadorDeGolpes.cpp  NotificadorDeGolpes.h  NotificadorDePuntos.cpp  NotificadorDePuntos.h  NumeroJugador.cpp  NumeroJugador.h  Opacidad.cpp  Opacidad.h  (+12 more)
niveles/: Nivel.cpp  Nivel.h  Nivel1.cpp  Nivel1.h
pantalla/: PantallaErrorDeConexion.cpp  PantallaErrorDeConexion.h
physics/: PhysicsComponent.cpp  PhysicsComponent.h
serializar/: Serializable.cpp  Serializable.h  Serializador.cpp  Serializador.h
services/: Locator.cpp  Locator.h  Logger.cpp  Logger.h
servicios/: Configuracion.cpp  Configuracion.h  Locator.cpp  Locator.h  Logger.cpp  Logger.h  XmlReader.cpp  XmlReader.h
servidor/: ActualizadorServidor.cpp  ActualizadorServidor.h  AnimacionServidor.cpp  AnimacionServidor.h  ConexionServidor.cpp  ConexionServidor.h  (+26 more)
(+537 files in other folders)
